tests/baselines/reference/disallowAsyncModifierInES5.errors.txt
error TS2318: Cannot find global type 'Promise'.
tests/cases/compiler/disallowAsyncModifierInES5.ts(2,1): error TS1311: Async functions are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/disallowAsyncModifierInES5.ts(2,16): error TS1057: An async function or method must have a valid awaitable return type.
tests/cases/compiler/disallowAsyncModifierInES5.ts(3,11): error TS1057: An async function or method must have a valid awaitable return type.
tests/cases/compiler/disallowAsyncModifierInES5.ts(3,11): error TS1311: Async functions are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/disallowAsyncModifierInES5.ts(4,11): error TS1311: Async functions are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/disallowAsyncModifierInES5.ts(4,11): error TS1057: An async function or method must have a valid awaitable return type.


!!! error TS2318: Cannot find global type 'Promise'.
==== tests/cases/compiler/disallowAsyncModifierInES5.ts (6 errors) ====
    
    async function foo() { return 42; } // ERROR: Async functions are only available in ES6+
    ~~~~~
!!! error TS1311: Async functions are only available when targeting ECMAScript 6 and higher.
                   ~~~
!!! error TS1057: An async function or method must have a valid awaitable return type.
    let bar = async function () { return 42; } // OK, but should be an error
              ~~~~~
!!! error TS1057: An async function or method must have a valid awaitable return type.
              ~~~~~
!!! error TS1311: Async functions are only available when targeting ECMAScript 6 and higher.
    let baz = async () => 42; // OK, but should be an error
              ~~~~~
!!! error TS1311: Async functions are only available when targeting ECMAScript 6 and higher.
              ~~~~~~~~~~~~~~
!!! error TS1057: An async function or method must have a valid awaitable return type.